[metadata]
name = Mezzanine
version = attr: mezzanine.__version__
description = An open source content management platform built using the Django framework.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Stephen McDonald
author_email = stephen.mc@gmail.com
url = http://mezzanine.jupo.org/
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.6
packages = mezzanine
include_package_data = true
install_requires =
    django-contrib-comments >= 2.0
    django >= 2.2
    tzlocal >= 2
    bleach >= 2, <5
    beautifulsoup4 >= 4.5.3
    requests >= 2.1.0
    requests-oauthlib >= 1.3
    pillow >= 7
    chardet >= 4
    pytz >= 2021.1
    filebrowser_safe@https://github.com/stephenmcd/filebrowser-safe/archive/master.tar.gz
    grappelli_safe@https://github.com/stephenmcd/grappelli-safe/archive/master.tar.gz

[options.extras_require]
testing =
    pytest-django >= 4, <5
    pytest-cov >= 2, < 3
codestyle =
    flake8 >= 3, <4
    black==20.8b1
    isort >= 5, <6
    pyupgrade >= 2, <3

[options.entry_points]
console_scripts =
    mezzanine-project = mezzanine.bin.mezzanine_project:create_project

# Building

[bdist_wheel]
universal = 1
