[metadata]
name = Mezzanine
version = attr: mezzanine.__version__
description = An open source content management platform built using the Django framework.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Stephen McDonald
author_email = stephen.mc@gmail.com
url = http://mezzanine.jupo.org/
license = BSD 4-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Framework :: Django
    Framework :: Django :: 5.2
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Internet :: WWW/HTTP :: WSGI
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.10
packages = mezzanine
include_package_data = true
install_requires =
    django-contrib-comments >= 2.2
    django >= 5.2, <5.3
    tzlocal >= 5
    bleach[css] >= 5
    beautifulsoup4 >= 4.5.3
    requests >= 2.1.0
    requests-oauthlib >= 1.3
    pillow >= 9
    chardet >= 7
    pytz >= 2026.1
    filebrowser_safe @ git+https://github.com/meteogrid/filebrowser-safe.git@7ac4dd5813a8f1ced12c551c1cd8c8675b88fff5
    grappelli_safe >= 1.1.1

[options.extras_require]
testing =
    pytest-django >= 4, <5
    pytest-cov >= 2
    requirements-parser >= 0.11
codestyle =
    flake8 >= 7, <8
    black == 24.1.0
    isort >= 5, <6
    pyupgrade >= 3.21, <4

[options.entry_points]
console_scripts =
    mezzanine-project = mezzanine.bin.mezzanine_project:create_project

# Building

[bdist_wheel]
universal = 1
